--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <p>Siben Nayak</p>
       </div>
     </div>
-    <script src="js/main.js" />
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
